--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Database Properties
-spring.datasource.url = jdbc:mysql://localhost:3306/atelier?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/atelier?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = xxx
 spring.datasource.password = !234Abcd
 ## Hibernate Properties
