--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.datasource.password = !234Abcd
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.discriminator.ignore_explicit_for_joined=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
